--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <body>
     <header>
         <nav>
-            <div class="left"><a href="index.html"> Mohammad Ashfak's Portfolio</a></div>
-            <div class="right">
+            <div class="left"><a href="index.html">Ashfak's Portfolio</a></div>
+            <div class="right" id="sidebar">
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="projects.html">Projects</a></li>
@@ -30,7 +30,7 @@
     </header>
 
     <main>
-        <section class="firstSection">
+        <div class="firstSection">
             <div class="leftSection">
                 Hi! My name is Mohammad Ashfak
                 <div>And I am a </div>
@@ -47,10 +47,18 @@
             <div class="rightSection">
                 <img src="bg.png" alt="">
             </div>
-        </section>
+        </div>
         <hr>
-        <section class="secondSection">
+        <div class="secondSection">
             <h1>Past Experience</h1>
+            <span class="work">Software Engineer (Nov-2022 to Feb-2023)</span>
+            <p>A Software Engineer designs, develops, and maintains software applications or systems. They write clean,
+                efficient code, collaborate with teams to understand requirements, and implement solutions to address
+                user needs. Engineers troubleshoot and debug issues, optimize performance, and ensure software is
+                scalable and secure. They stay updated on emerging technologies and best practices to enhance their
+                development process. Additionally, they may be involved in testing, deployment, and documentation,
+                ensuring the software meets quality standards and aligns with business goals. Their work spans various
+                industries, from web development to AI and mobile applications.</p>
             <span class="work">PF-ESI Consultant (Dec-2023 to May-2025)</span>
             <p class="details">Managing PF and ESI involves ensuring accurate deductions and timely submissions for
                 employee benefits.
@@ -60,7 +68,7 @@
                 covered under medical and social security benefits. Monitoring eligibility, filing returns, and
                 addressing any discrepancies or employee queries were essential. Staying updated with regulatory changes
                 and ensuring smooth communication with the authorities were key responsibilities in both areas.</p>
-        </section>
+        </div>
     </main>
     <footer class="footer-main">
         <ul>
@@ -69,7 +77,7 @@
             <li><a href="aboutus.html">About US</a></li>
             <li><a href="contactus.html">Contact US</a></li>
         </ul>
-        <span class="copy">Copyright&copy;All Rights reserved | Designed By Mohammad Ashfak</span>
+        <span class="copy">Copyright &copy; All Rights reserved | Designed By Mohammad Ashfak</span>
 
     </footer>
 
