--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style1.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -70,6 +70,16 @@
                 and ensuring smooth communication with the authorities were key responsibilities in both areas.</p>
         </div>
     </main>
+
+
+    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+    <!-- Setup and start animation! -->
+    <script>
+        var typed = new Typed('#element', {
+            strings: ['Web Developer.', 'Graphics Designer.', 'Video Editor.'],
+            typeSpeed: 90,
+        });
+    </script>
     <footer class="footer-main">
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -80,16 +90,6 @@
         <span class="copy">Copyright &copy; All Rights reserved | Designed By Mohammad Ashfak</span>
 
     </footer>
-
-    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
-    <!-- Setup and start animation! -->
-    <script>
-        var typed = new Typed('#element', {
-            strings: ['Web Developer.', 'Graphics Designer.', 'Video Editor.'],
-            typeSpeed: 90,
-        });
-    </script>
-
 
 
 </body>
